[package]
name = "cmw"
version = "0.1.0"
edition = "2021"
authors = ["Ionut Mihalcea <ionut.mihalcea@arm.com>"]
homepage = "https://github.com/veraison/rust-cmw"
repository = "https://github.com/veraison/rust-cmw"
description = "Rust implementation of CMW"
keywords = ["cmw", "ietf", "cbor", "json", "attestation"]
categories = [
    "os",
    "os::linux-apis",
    "parsing",
    "network-programming",
    "hardware-support",
]
exclude = [".gitignore", ".github/*"]
rust-version = "1.85.0"
license = "Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = { version = "0.22", features = ["alloc"]}
base64-serde = "0.8.0"
iri-string = "0.7.8"
regex = "1.9"
bitflags = "1.3"
once_cell = "1.18"
thiserror = "2.0"
simple_asn1 = "0.6"
mime = "0.3.17"
hex = "0.4.3"
lazy_static = "1.5.0"
minicbor = { version = "1.0.0", features = ["std"]}
minicbor-serde = { version = "0.6.2", features = ["alloc"] }

[build-dependencies]
xml-rs = "0.8"
once_cell = "1.19.0"
reqwest = { version = "0.12", features = ["blocking"] }

[features]
default = []
rebuild-cfmap = []
